# wikimusic-model-hs

./: CHANGELOG.org  Makefile  README.org  cabal.project  flake.nix  stack.yaml  wikimusic-model-hs.cabal
.github/workflows/: hackage.yaml
src/WikiMusic/: Functional.hs
src/WikiMusic/Interaction/Model/: Artist.hs  Auth.hs  Genre.hs  Song.hs  User.hs
src/WikiMusic/Model/: Artist.hs  Artwork.hs  Auth.hs  Comment.hs  Genre.hs  Mail.hs  Opinion.hs  Other.hs  Song.hs  Thread.hs
