cabal-version: 1.12

name:           wikimusic-model-hs
version:        1.2.0.1
description:    Please see the README at <https://github.com/jjba23/wikimusic-model-hs>
homepage:       https://github.com/jjba23/wikimusic-model-hs
bug-reports:    https://github.com/jjba23/wikimusic-model-hs/-/issues
author:         Josep Bigorra
maintainer:     Josep Bigorra <jjbigorra@gmail.com>
copyright:      2023 Josep Bigorra
license:        GPL-3
build-type:     Simple
                
extra-source-files:
    README.org
    CHANGELOG.org

source-repository head
  type: git
  location: https://github.com/jjba23/wikimusic-model-hs
  subdir: wikimusic-model-hs

library
  exposed-modules:
     
      -- λ models for interactions with wikimusic's system
      WikiMusic.Interaction.Model.Artist
      WikiMusic.Interaction.Model.User
      WikiMusic.Interaction.Model.Auth
      WikiMusic.Interaction.Model.Genre
      WikiMusic.Interaction.Model.Song

      -- λ domain models
      WikiMusic.Model.Artist      
      WikiMusic.Model.Auth     
      WikiMusic.Model.Genre    
      WikiMusic.Model.Mail
      WikiMusic.Model.Other
      WikiMusic.Model.Artwork
      WikiMusic.Model.Song     
      WikiMusic.Model.Thread
      WikiMusic.Model.Comment
      WikiMusic.Model.Opinion

      
  other-modules:
      Paths_wikimusic_model_hs
  hs-source-dirs:
      src
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  default-extensions:
      DataKinds
      DefaultSignatures
      DuplicateRecordFields
      EmptyDataDecls
      ExistentialQuantification
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      InstanceSigs
      KindSignatures
      LambdaCase
      MultiWayIf
      NamedFieldPuns
      NoImplicitPrelude
      OverloadedStrings
      PartialTypeSignatures
      RecordWildCards
      TypeFamilies
      ViewPatterns

  build-depends:
      aeson
    , async
    , base
    , bytestring
    , keuringsdienst
    , keys
    , mtl
    , openapi3
    , optics
    , password
    , password-types
    , relude
    , time
    , text
    , containers
    , filepath
    , directory
    , uuid
    , neat-interpolation
    , tomland
  default-language: GHC2021

